--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Embed Project</title>
 </head>
 <body>
-    <iframe src="https://account-dev.constellation.com/employee" width="100%" height="600px" frameborder="0"></iframe>
+    <iframe src="https://account-dev.constellation.com" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
