--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Embed Project</title>
 </head>
 <body>
-    <iframe src="https://account-dev.constellation.com" width="100%" height="600px" frameborder="0"></iframe>
+    <h1>Data from API:</h1>
+    <pre id="output">Loading...</pre>
+
+    <script>
+        const url = 'https://www-stage.constellation.com/graphql/cep/disclaimer'; // Replace with your actual URL
+
+        fetch(url)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok: ' + response.statusText);
+                }
+                return response.json();
+            })
+            .then(data => {
+                document.getElementById('output').textContent = JSON.stringify(data, null, 2);
+            })
+            .catch(error => {
+                document.getElementById('output').textContent = 'Error: ' + error.message;
+            });
+    </script>
 </body>
 </html>
